# silicon_giant

./: .gitignore  CMakeLists.txt  Network.cpp  Network.h  Neuron.cpp  Neuron.h  README.md  Synapse.cpp  Synapse.h  main.cpp  vcpkg.json
lib/silicon_giant/: ui.cpp  ui.h  util.cpp  util.h
src/: Network.cpp  Network.h  Neuron.cpp  Neuron.h  Synapse.cpp  Synapse.h  app.cpp  app.h  main.cpp
